--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   </div>
 
   <!-- weather -->
-  <div class="weather-icon"></div>
-  <span class="js-weather"></span>
+  <!-- <div class="weather-icon"></div> -->
+  <div class="js-weather"></div>
 
   <script src="clock.js"></script>
   <script src="greeting.js"></script>
