--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+  <!-- weather -->
+  <!-- <div class="weather-icon"></div> -->
+  <div class="js-weather"></div>
+
+  <!-- reset button -->
+  <button class="js-reset-btn button"><i class="fas fa-sign-out-alt"></i></button>
+
   <div class="clock-name">
     <!-- clock -->
     <div class="js-clock">
@@ -27,6 +34,7 @@
     <h4 class="js-greetings greetings"></h4>
   </div>
 
+
   <!-- todo list -->
   <div class="center">
     <form class="js-toDoForm">
@@ -35,9 +43,6 @@
     <ul class="js-toDoList"></ul>
   </div>
 
-  <!-- weather -->
-  <!-- <div class="weather-icon"></div> -->
-  <div class="js-weather"></div>
 
   <script src="clock.js"></script>
   <script src="greeting.js"></script>
