signout버튼 localStorage.clear

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <ul class="js-toDoList"></ul>
   </div>
 
-
-  <script src="clock.js"></script>
-  <script src="greeting.js"></script>
-  <script src="todo.js"></script>
-  <script src="bg.js"></script>
-  <script src="weather.js"></script>
+  
+  <script type="module" src="module/greeting.js"></script>
+  <script type="module" src="module/todo.js"></script>
+  <script src="./clock.js"></script>
+  <script src="./bg.js"></script>
+  <script src="./weather.js"></script>
 
 </body>
 
