--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- user name -->
     <form class="js-form form">
-      <input type="text" placeholder="이름을 입력하세요 Enter!" autofocus="autofocus"/>
+      <input type="text" placeholder="이름을 입력하세요 Enter!" autofocus="autofocus" maxlength="7"/>
     </form>
     <h4 class="js-greetings greetings"></h4>
   </div>
@@ -38,7 +38,7 @@
   <!-- todo list -->
   <div class="center">
     <form class="js-toDoForm">
-      <input type="text" placeholder="할 일을 추가해보세요 Enter!" autofocus="autofocus"/>
+      <input type="text" placeholder="할 일을 추가해보세요 Enter!" autofocus="autofocus" maxlength="28"/>
     </form>
     <ul class="js-toDoList"></ul>
   </div>
